// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createConfig valid config #0 1`] = `
Object {
  "features": false,
  "genres": false,
  "outDir": "",
  "token": "123",
  "type": "normal",
}
`;

exports[`createConfig valid config #1 1`] = `
Object {
  "features": false,
  "genres": false,
  "outDir": "",
  "token": "123",
  "type": "full",
}
`;

exports[`createConfig valid config #2 1`] = `
Object {
  "features": false,
  "genres": false,
  "outDir": "",
  "token": "123",
  "type": "normal",
}
`;

exports[`createConfig valid config #3 1`] = `
Object {
  "features": false,
  "genres": false,
  "outDir": "",
  "token": "123",
  "type": "normal",
}
`;

exports[`createConfig valid config #4 1`] = `
Object {
  "features": true,
  "genres": true,
  "outDir": "",
  "token": "123",
  "type": "normal",
}
`;

exports[`createConfig valid config #5 1`] = `
Object {
  "features": true,
  "genres": true,
  "outDir": "/data",
  "token": "123",
  "type": "normal",
}
`;
